CCD-7656 Apostrophe straight or right normalisation